# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODOLIST.md  TODOLIST.txt
.github/workflows/: cmake.yml
asset-baker/: CMakeLists.txt  asset_main.cpp
assetlib/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  material_asset.h  mesh_asset.cpp  mesh_asset.h  texture_asset.cpp  texture_asset.h
engine/: CMakeLists.txt  camera.cpp  camera.h  cvars.cpp  cvars.h  event_handler.cpp  event_handler.h  fly_animator.cpp  fly_animator.h  imgui_widgets.cpp  imgui_widgets.h  logger.h  main.cpp  material_system.cpp  material_system.h  string_utils.h  transform.cpp  transform.h  vk_descriptors.cpp  vk_descriptors.h  vk_device_builder.cpp  vk_device_builder.h  vk_device_selector.cpp  vk_device_selector.h  vk_engine.cpp  vk_engine.h  vk_instance_builder.cpp  vk_instance_builder.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_profiler.cpp  vk_profiler.h  vk_scene.cpp  vk_scene.h  vk_shader.cpp  vk_shader.h  vk_swapchain.cpp  vk_textures.cpp  (+2 more)
output/Debug/: build.sh  configure.sh
output/Release/: build.sh  configure.sh
shaders/: default_lit.frag  textured_lit.frag  tri_mesh.vert
src/: CMakeLists.txt  vk_device_builder.cpp  vk_device_selector.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_instance_builder.h  vk_mesh.h  vk_swapchain.h
vulkan-guide/: CMakeLists.txt  TODOLIST.txt
vulkan-guide/shaders/: colored_triangle.frag  colored_triangle.vert  tri_mesh.vert  triangle.frag  triangle.vert
vulkan-guide/src/: CMakeLists.txt  Makefile  cmake_install.cmake  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_textures.h  vk_types.h
